# pidc

./: Makefile  a2b.c  arbprec.c  arbsqrt.c  countzeros.c  dcpi.sh  domrechts.gn  find277.c  findratio.c  getratio.sh  gnuplotsettings  hello  hlist  libsqrt.c  libsqrt.h  log_dumb.dc  log_max.dc  log_min.dc  log_smart.db  log_smart.dc  log_smart2.dc  newpi  newpi.gn  newpi.sh  nextiter.sh  oink  pi.dc  pionline.dc  piopt.sh  previter.sh  proof  q.dc  quotient.sh  upi
